fix bg size jump on url bar shown

--- a/src/components/HeroBanner/HeroBanner.module.css
+++ b/src/components/HeroBanner/HeroBanner.module.css
@@ -2,7 +2,6 @@
   height: 70vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: auto 100%;
   background-image: url("../../assets/herobannerOptimizedMobile.jpg");
   position: relative;
   bottom: 0;
